# simulation-tutorial

./: .gitignore  README.md  pyproject.toml
notebooks/: 1_discovering_xarray.ipynb  2_apply_ufunc.ipynb  3_monte_carlo_error_propagation.ipynb  3_qutip_example.ipynb  4_multiprocessing.ipynb  example.ipynb  profile.html  tutorial.ipynb  tutorial_2.ipynb
src/simulation_tutorial/: energy.py  lib.py  xarray_mods.py
