[project]
name = "simulation_tutorial"
version = "0.1.0"
description = "Example on how to use rye for your repository and xarray apply_ufunc for sweeping."
authors = [
    { name = "Hans Beukers", email = "h.k.c.beukers@tudelft.nl" }
]
dependencies = [
    "numpy>=2.0.0",
    "xarray>=2024.6.0",
    "multiprocess>=0.70.16",
    "tqdm>=4.66.4",
    "jupyter>=1.0.0",
    "matplotlib>=3.9.1",
    "dask>=2024.7.0",
    "bokeh>=3.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.workspace]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_tutorial"]

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true

[tool.ruff.lint]
select = ["I"]
