[project]
name = "simulation_tutorial"
version = "0.1.0"
description = "Example on how to use uv for your repository and xarray apply_ufunc for sweeping."
authors = [
    { name = "Hans Beukers", email = "h.k.c.beukers@tudelft.nl" }
]
dependencies = [
    "numpy>=2.0.0",
    "xarray[io, parallel, viz]>=2024.6.0",
    "tqdm>=4.66.4",
    "jupyter>=1.0.0",
    "qutip>=5.1.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.uv]
required-version = ">0.5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_tutorial"]

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true

[tool.ruff.lint]
select = ["I"]
