[project]
name = "simulation-tutorial"
version = "1.0.0"
description = "Examples on how to use uv for your repository and xarray apply_ufunc for sweeping of simulations."
authors = [
    { name = "Hans Beukers", email = "h.k.c.beukers@tudelft.nl" }
]
dependencies = [
    "xarray[io, parallel, viz]>=2024.6.0",
    "tqdm>=4.66.4",
    "jupyter>=1.0.0",
    "qutip>=5.1.1",
    "multiprocess>=0.70.17",
    "lmfit>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulation_tutorial"]

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true

[tool.ruff.lint]
select = ["I"]
